Css fixes: text selection when sorting in IE, and subtitle ellipsis overflow

--- a/web/plugins/map-product/src/main/resources/org/visallo/web/product/map/layers/mapLayers.less
+++ b/web/plugins/map-product/src/main/resources/org/visallo/web/product/map/layers/mapLayers.less
@@ -107,6 +107,10 @@
   cursor: grab;
   cursor: -webkit-grab;
   cursor: -moz-grab;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 
   input {
     flex: 0 0 auto;
@@ -119,7 +123,6 @@
     flex: 1 1 auto;
     overflow: hidden;
     margin: 0.5em;
-    user-select: none;
 
     span {
       line-height: initial;
@@ -135,6 +138,9 @@
     .subtitle {
       font-size: x-small;
       color: #aaa;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 
